--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "react-native-gesture-handler": "^1.0.0",
     "react-native-reanimated": "^1.0.0"
   },
+  "dependencies": {
+    "react-native-reanimated": "^1.7.1"
+  },
   "devDependencies": {
     "@types/react": "^16.8.8",
     "@types/react-native": "^0.60.8",
@@ -47,7 +50,7 @@
     "react": "^16.12.0",
     "react-native": "^0.61.5",
     "react-native-gesture-handler": "^1.5.3",
-    "react-native-reanimated": "^1.7.0",
+    "react-native-reanimated": "^1.7.1",
     "typescript": "^3.7.3"
   }
 }
